# databroom

./: .coverage  .gitignore  ADDING_CLEANING_OPERATIONS.md  LICENSE  README.md  create_pipeline.py  pyproject.toml  requirements-dev.txt  requirements.txt  script_prueba.py  test_clean.csv
databroom/: __init__.py
databroom.egg-info/: PKG-INFO  requires.txt
databroom/cli/: __init__.py  commands.py  config.py  main.py  operations.py  utils.py
databroom/core/: __init__.py  broom.py  cleaning_ops.py  debug_logger.py  history_tracker.py  pipeline.py  pipeline_io.py
databroom/generators/: __init__.py  base.py
databroom/generators/templates/: R_pipeline.R.j2  macros.j2  python_pipeline.py.j2
databroom/gui/: app.py  app_backup.py
databroom/gui/components/: __init__.py  controls.py  file_upload.py  operations.py  tabs.py
databroom/gui/config/: __init__.py
databroom/gui/utils/: __init__.py  session.py  styles.py
janitor_bot/: test_generated_pipeline.R
janitor_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
janitor_bot/cli/: __init__.py  commands.py  config.py  main.py  operations.py  utils.py
janitor_bot/core/: cleaning_ops.py  command.py  debug_logger.py  history_tracker.py  janitor.py  pipeline.py
janitor_bot/generators/: base.py
janitor_bot/generators/templates/: macros.j2  python_pipeline.py.j2
janitor_bot/gui/: app.py
tests/: conftest.py
tests/core/: test_cleaning_ops.py  test_janitor.py  test_pipeline.py
tests/generators/: test_base.py  test_templates.py
tests/test_data/: dirty_data.csv  missing_values.csv  sample.csv  sample.json  sample.xlsx
